--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "emoji-mart": "^5.5.2",
+    "livekit-client": "^2.0.9",
     "livekit-server-sdk": "^2.1.2",
     "lucide-react": "^0.344.0",
     "next": "14.1.2",
